# pizza-price-ml

./: .gitignore  README.md  app.py  pyproject.toml  testes.ipynb
