[tool.poetry]
name = "pizza-price-ml"
version = "0.1.0"
description = ""
authors = ["Sidney Ferracin Jr. <sidneyferracinjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
streamlit = "^1.37.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
